# ssafy-custom-news-data

./: .env.example  .gitignore  README.md  crawling.py  dashboard.py  pyproject.toml  spark_streaming_server.py  test.py
batch/: airflow.cfg  airflow.db  daily_report_dag.py  postgresql_es_sync.py  spark_daily_report.py
batch/dags/: daily_report_dag.py  hourly_sync_dag.py
consumer/: flink_kafka_consumer.py  preprocessing.py  test.py
data/: 1_filtered_data.csv  2_integrated_data_with_vectors.csv  category_classification_model.joblib
kafka-es/: docker-compose.yml
producer/: rss_kafka_producer.py  rss_test.py
tfidf/: 1_load_json_to_csv.ipynb  2_preprocess_and_tfidf.ipynb  3_inference_models.ipynb
tfidf/data/: 1_filtered_data.csv
week-14/: .env.example  README.md  pyproject.toml  rss_db.py
week-15/: .env.example  README.md
week-15/consumer/: flink_kafka_consumer.py  rss_transform.py
week-15/kafka/: docker-compose.yml
week-15/producer/: rss_kafka_producer.py
week-17/: .env.example  README.md  pyproject.toml
week-17/batch/: airflow.cfg  airflow.db  postgresql_es_sync.py  spark_daily_report.py  standalone_admin_password.txt
week-17/batch/dags/: daily_report_dag.py
week-17/consumer/: flink_kafka_consumer.py  rss_transform.py
week-17/kafka-es/: docker-compose.yml
week-17/producer/: rss_kafka_producer.py
