[tool.poetry]
name = "ssafy-custom-news-data"
version = "0.1.0"
description = ""
authors = ["jiwoochris <travelandi01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.5.3"
hdfs = "^2.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
